@@ -4,14 +4,13 @@
 
 package org.chromium.components.cached_flags;
 
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 import static org.mockito.Mockito.when;
 
-import static org.chromium.base.test.util.BaseFlagTestRule.A_OFF_B_ON;
 import static org.chromium.base.test.util.BaseFlagTestRule.A_ON_B_OFF;
-import static org.chromium.base.test.util.BaseFlagTestRule.A_ON_B_ON;
 import static org.chromium.base.test.util.BaseFlagTestRule.FEATURE_A;
 import static org.chromium.base.test.util.BaseFlagTestRule.FEATURE_B;
-import static org.chromium.base.test.util.BaseFlagTestRule.assertIsEnabledMatches;
 
 import org.junit.Rule;
 import org.junit.Test;
@@ -20,7 +19,6 @@ import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnit;
 import org.mockito.junit.MockitoRule;
 
-import org.chromium.base.FeatureList;
 import org.chromium.base.FeatureMap;
 import org.chromium.base.cached_flags.ValuesReturned;
 import org.chromium.base.test.BaseRobolectricTestRunner;
@@ -28,6 +26,7 @@ import org.chromium.base.test.util.BaseFlagTestRule;
 import org.chromium.base.test.util.Features;
 
 import java.util.Arrays;
+import java.util.List;
 
 /** Unit Tests for {@link CachedFlag}. */
 @RunWith(BaseRobolectricTestRunner.class)
@@ -51,10 +50,11 @@ public class CachedFlagUnitTest {
         // Cache native flags, meaning values from ChromeFeatureList should be used from now on.
         when(mFeatureMap.isEnabledInNative(FEATURE_A)).thenReturn(false);
         when(mFeatureMap.isEnabledInNative(FEATURE_B)).thenReturn(true);
-        CachedFlagUtils.cacheNativeFlags(Arrays.asList(featureA, featureB));
+        CachedFlagUtils.cacheNativeFlags(List.of(Arrays.asList(featureA, featureB)));
 
         // Assert {@link CachedFeatureFlags} uses the values from {@link ChromeFeatureList}.
-        assertIsEnabledMatches(A_OFF_B_ON, featureA, featureB);
+        assertFalse(featureA.isEnabled());
+        assertTrue(featureB.isEnabled());
     }
 
     @Test
@@ -67,13 +67,15 @@ public class CachedFlagUnitTest {
         when(mFeatureMap.isEnabledInNative(FEATURE_B)).thenReturn(true);
 
         // Query the flags to make sure the default values are returned.
-        assertIsEnabledMatches(A_ON_B_OFF, featureA, featureB);
+        assertTrue(featureA.isEnabled());
+        assertFalse(featureB.isEnabled());
 
         // Now do cache the values from ChromeFeatureList.
-        CachedFlagUtils.cacheNativeFlags(Arrays.asList(featureA, featureB));
+        CachedFlagUtils.cacheNativeFlags(List.of(Arrays.asList(featureA, featureB)));
 
         // Verify that {@link CachedFlag} returns consistent values in the same run.
-        assertIsEnabledMatches(A_ON_B_OFF, featureA, featureB);
+        assertTrue(featureA.isEnabled());
+        assertFalse(featureB.isEnabled());
     }
 
     @Test
@@ -84,8 +86,9 @@ public class CachedFlagUnitTest {
         // Cache native flags, meaning values from ChromeFeatureList should be used from now on.
         when(mFeatureMap.isEnabledInNative(FEATURE_A)).thenReturn(false);
         when(mFeatureMap.isEnabledInNative(FEATURE_B)).thenReturn(true);
-        CachedFlagUtils.cacheNativeFlags(Arrays.asList(featureA, featureB));
-        assertIsEnabledMatches(A_OFF_B_ON, featureA, featureB);
+        CachedFlagUtils.cacheNativeFlags(List.of(Arrays.asList(featureA, featureB)));
+        assertFalse(featureA.isEnabled());
+        assertTrue(featureB.isEnabled());
 
         // Pretend the app was restarted. The SharedPrefs should remain.
         ValuesReturned.clearForTesting();
@@ -97,19 +100,22 @@ public class CachedFlagUnitTest {
         // Do not cache new values, but query the flags to make sure the values stored to prefs
         // are returned. Neither the defaults (false/false) or the ChromeFeatureList values
         // (true/true) should be returned.
-        assertIsEnabledMatches(A_OFF_B_ON, featureA, featureB);
+        assertFalse(featureA.isEnabled());
+        assertTrue(featureB.isEnabled());
 
         // Now do cache the values from ChromeFeatureList.
-        CachedFlagUtils.cacheNativeFlags(Arrays.asList(featureA, featureB));
+        CachedFlagUtils.cacheNativeFlags(List.of(Arrays.asList(featureA, featureB)));
 
         // Verify that {@link CachedFlag} returns consistent values in the same run.
-        assertIsEnabledMatches(A_OFF_B_ON, featureA, featureB);
+        assertFalse(featureA.isEnabled());
+        assertTrue(featureB.isEnabled());
 
         // Pretend the app was restarted again.
         ValuesReturned.clearForTesting();
 
         // The SharedPrefs should retain the latest values.
-        assertIsEnabledMatches(A_ON_B_ON, featureA, featureB);
+        assertTrue(featureA.isEnabled());
+        assertTrue(featureB.isEnabled());
     }
 
     @Test
@@ -120,18 +126,20 @@ public class CachedFlagUnitTest {
         CachedFlag featureB = new CachedFlag(mFeatureMap, FEATURE_B, true);
 
         // Verify that the forced value is returned.
-        assertIsEnabledMatches(A_ON_B_OFF, featureA, featureB);
+        assertTrue(featureA.isEnabled());
+        assertFalse(featureB.isEnabled());
     }
 
     @Test
-    public void testFeatureListOverride_returnsForcedValue() {
+    public void testFeatureOverride_returnsForcedValue() {
         CachedFlag featureA = new CachedFlag(mFeatureMap, FEATURE_A, false);
         CachedFlag featureB = new CachedFlag(mFeatureMap, FEATURE_B, true);
 
         // Force different values
-        FeatureList.setTestFeatures(A_ON_B_OFF);
+        A_ON_B_OFF.apply();
 
         // Verify that the forced value is returned.
-        assertIsEnabledMatches(A_ON_B_OFF, featureA, featureB);
+        assertTrue(featureA.isEnabled());
+        assertFalse(featureB.isEnabled());
     }
 }
